still working on wire frame

--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 </head>
 
 <body>
+    <div class="container-fluid">
+        <div class="container-fluid" id="bg">
+            <div class="container" id="aboutText">
+
+            </div>
+        </div>
+    </div>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
 
